Log Change Definition

--- a/details/CMakeLists.txt
+++ b/details/CMakeLists.txt
@@ -1,2 +1,3 @@
-aux_source_directory(${INC_CARBON_BASE} SRC_CARBON)
-aux_source_directory(${SRC_CARBON_BASE} SRC_CARBON)
+set(INC_CARBON_ALL ${INC_CARBON_BASE})
+aux_source_directory(${INC_CARBON_BASE} SRC_CARBON_ALL)
+aux_source_directory(${SRC_CARBON_BASE} SRC_CARBON_ALL)
