--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 set(CMAKE_CXX_STANDARD 14)
 
 Project(Carbon)
+add_definitions(-DCARBON_EXPORTS)
+IF(WIN32)
+    add_definitions(-DCARBON_TARGET_WINDOWS)
+ENDIF()
 set(INC_CARBON_BASE Carbon)
 set(SRC_CARBON_BASE details)
 include(details/CMakeLists.txt)
