--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ Project(Carbon)
 add_definitions(-DCARBON_EXPORTS)
 IF(WIN32)
     add_definitions(-DCARBON_TARGET_WINDOWS)
+ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
+    add_definitions(-DCARBON_TARGET_LINUX)
+    link_libraries(dl)
+ELSEIF(Apple)
+    add_definitions(-DCARBON_TARGET_APPLE)
 ENDIF()
 set(INC_CARBON_BASE Carbon)
 set(SRC_CARBON_BASE details)
