GCC Compile Fixing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,19 @@ IF(WIN32)
     add_definitions(-DCARBON_TARGET_WINDOWS)
 ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
     add_definitions(-DCARBON_TARGET_LINUX)
-    link_libraries(dl)
 ELSEIF(Apple)
     add_definitions(-DCARBON_TARGET_APPLE)
 ENDIF()
+
+IF(UNIX)
+    link_libraries(dl pthread)
+ENDIF()
+
 set(INC_CARBON_BASE Carbon)
-set(SRC_CARBON_BASE details)
-include(details/CMakeLists.txt)
+set(SRC_CARBON_BASE Details)
+include(Details/CMakeLists.txt)
 include_directories(${INC_CARBON_ALL})
 add_library(Carbon SHARED ${SRC_CARBON_ALL})
-add_executable(CarbonTest tests/Tests.cpp)
+add_executable(CarbonTest Tests/Tests.cpp)
 target_link_libraries(CarbonTest Carbon)
 
