--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,22 @@ dist: trusty
 matrix:
   include:
     - os: linux
-      env: COMPILER_NAME=clang
+      env: COMPILER_NAME=gcc
       addons:
         apt:
           packages:
-            - clang
+            - libgtest-dev
+            - g++-6
+            - gcc-6
             - p7zip
             - cmake
-            - libgtest-dev
+            - cmake-data
+install:
+  - sudo ln -s /usr/bin/g++-6 /usr/bin/g++ -f
 install:
 script:
   - mkdir bin && cd ./bin 
-  - cmake .. -Wno-dev -DCMAKE_CXX_COMPILER=clang++ -D_CMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release
+  - cmake .. -Wno-dev -DCMAKE_BUILD_TYPE=Release
   - cmake --build .
   - ./CarbonTests
   - cd ..
