--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
   - sudo ln -s /usr/bin/g++-6 /usr/bin/g++ -f
   - sudo ln -s /usr/bin/gcc-6 /usr/bin/gcc -f
 script:
-  - mkdir bin && cd bin
+  - mkdir ./bin && cd ./bin
   - cmake .. -Wno-dev
   - make
   - cd ..
