--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: generic
 sudo: required
 dist: trusty
 cache:
-  directories:	
+  directories:
+    - googletest	
     - bin/CMakeFiles/
 matrix:
   include:
@@ -21,10 +22,21 @@ matrix:
             - p7zip
             - cmake
             - cmake-data
-            - libgtest-dev
 install:
   - sudo ln -s /usr/bin/g++-6 /usr/bin/g++ -f
   - sudo ln -s /usr/bin/gcc-6 /usr/bin/gcc -f
+  - |
+    if [ ! -f ./googletest/cached_mark ];
+    then
+    git clone https://github.com/google/googletest --depth=1
+    cd ./googletest
+    cmake . -DCMAKE_BUILD_TYPE=Release
+    make
+    touch cached_mark
+    cd ..
+    fi
+  - cd ./googletest
+  - sudo make install
 script:
   - cd bin
   - cmake .. -Wno-dev
