--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,7 @@ if(OPENMP_FOUND)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
-find_package(GTest REQUIRED)
 add_definitions(-DUNITTESTINC="../Build/UNIX/UnitTestUNIX.h")
 add_executable(CarbonTest Tests/Tests.cpp)
-target_link_libraries(CarbonTest Carbon  GTest::GTest GTest::Main)
+target_link_libraries(CarbonTest Carbon gtest gtest_main)
 
