--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,14 @@ set(CMAKE_CXX_STANDARD 14)
 Project(Carbon)
 add_definitions(-DCARBON_EXPORTS)
 IF(WIN32)
+    set(CARBON_TARGET_WINDOWS)
     add_definitions(-DCARBON_TARGET_WINDOWS)
 ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
-    add_definitions(-DCARBON_TARGET_LINUX)
+    set(CARBON_TARGET_POSIX)
+    add_definitions(-DCARBON_TARGET_POSIX)
 ELSEIF(Apple)
-    add_definitions(-DCARBON_TARGET_APPLE)
+    set(CARBON_TARGET_POSIX)
+    add_definitions(-DCARBON_TARGET_POSIX)
 ENDIF()
 
 IF(UNIX)
