--- a/Details/CMakeLists.txt
+++ b/Details/CMakeLists.txt
@@ -1,3 +1,9 @@
 set(INC_CARBON_ALL ${INC_CARBON_BASE})
 aux_source_directory(${INC_CARBON_BASE} SRC_CARBON_ALL)
 aux_source_directory(${SRC_CARBON_BASE} SRC_CARBON_ALL)
+IF(CARBON_TARGET_WINDOWS)
+    aux_source_directory(${SRC_CARBON_BASE}/Windows SRC_CARBON_ALL)
+ENDIF()
+IF(CARBON_TARGET_POSIX)
+    aux_source_directory(${SRC_CARBON_BASE}/Posix SRC_CARBON_ALL)
+ENDIF() 
