[Dynamic Library]Initialize

--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -3,3 +3,4 @@ aux_source_directory(${INC_CARBON_BASE} SRC_CARBON_ALL)
 aux_source_directory(${SRC_CARBON_BASE}/Carbon SRC_CARBON_ALL)
 aux_source_directory(${SRC_CARBON_BASE}/Carbon/System SRC_CARBON_ALL)
 aux_source_directory(${SRC_CARBON_BASE}/Carbon/System/Concurrency SRC_CARBON_ALL)
+aux_source_directory(${SRC_CARBON_BASE}/Carbon/System/DynamicLibrary SRC_CARBON_ALL)
