--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,35 @@ IF(UNIX)
     link_libraries(dl pthread)
 ENDIF()
 
+# Download and unpack googletest at configure time
+configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+if(result)
+  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+endif()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+if(result)
+  message(FATAL_ERROR "Build step for googletest failed: ${result}")
+endif()
+# Prevent overriding the parent project's compiler/linker
+# settings on Windows
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+# Add googletest directly to our build. This defines
+# the gtest and gtest_main targets.
+add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src
+                 ${CMAKE_BINARY_DIR}/googletest-build)
+# The gtest/gtest_main targets carry header search path
+# dependencies automatically when using CMake 2.8.11 or
+# later. Otherwise we have to add them here ourselves.
+if (CMAKE_VERSION VERSION_LESS 2.8.11)
+  include_directories("${gtest_SOURCE_DIR}/include")
+endif()
+
 # Build Library
 set(INC_CARBON_BASE Include)
 set(SRC_CARBON_BASE Libraries)
@@ -23,5 +52,5 @@ if(OPENMP_FOUND)
 endif()
 add_definitions(-DUNITTESTINC="../Build/UNIX/UnitTestUNIX.h")
 add_executable(CarbonTest Tests/Tests.cpp)
-target_link_libraries(CarbonTest Carbon gtest gtest_main)
-
+target_link_libraries(CarbonTest Carbon gtest_main)
+add_test(NAME CarbonTests COMMAND CarbonTest)
